# openpowerlifting

./: .env  .gitignore  README.md  config.py  create_agent.py  custom_suffix.py  dataloading.py  db_connect_test.py  db_utils.py  docker-compose.yml  inference.ipynb  main.py  pyproject.toml  sql_tools.py  sqlquerydataset.py  starcoder3b.py  train_attempt.py  training.py  training_g.py  trainingstarcoder.py
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml  postCreateCommand.sh
finetune_starcoder2/checkpoint-1000/: rng_state.pth  scheduler.pt  trainer_state.json
finetune_starcoder2/checkpoint-1500/: rng_state.pth  scheduler.pt  trainer_state.json
finetune_starcoder2/checkpoint-2000/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
finetune_starcoder2/checkpoint-2500/: rng_state.pth  scheduler.pt  trainer_state.json
finetune_starcoder2/checkpoint-3000/: rng_state.pth  scheduler.pt  trainer_state.json
finetune_starcoder2/checkpoint-3500/: README.md  rng_state.pth  scheduler.pt  trainer_state.json
finetune_starcoder2/checkpoint-4000/: rng_state.pth  scheduler.pt  trainer_state.json
finetune_starcoder2/checkpoint-4500/: rng_state.pth  scheduler.pt  trainer_state.json
finetune_starcoder2/checkpoint-500/: rng_state.pth  scheduler.pt  trainer_state.json
finetune_starcoder2/checkpoint-5000/: rng_state.pth  scheduler.pt  trainer_state.json
finetune_starcoder2/final_checkpoint/: tokenizer.json
finetune_starcoder2_0.4epochs/checkpoint-1000/: scheduler.pt
finetune_starcoder2_0.4epochs/checkpoint-500/: README.md  scheduler.pt  tokenizer_config.json
finetune_starcoder2_0.4epochs/final_checkpoint/: adapter_config.json
finetune_starcoder2_0.4epochs/runs/Jun18_10-58-27_68c53361b108/: events.out.tfevents.1718708485.68c53361b108.1095.0
python/: .env  pyproject.toml  secrets.toml  settings.toml  setup.cfg
python/src/openpowerlifting/: config.py  create_agent.py  db_utils.py  main.py  sql_agent.py  sql_tools.py
runtime/postgresql/init/: init.sql
runtime/scripts/: download_data.sh
wandb/: latest-run
wandb/offline-run-20240618_140201-51i98scw/: run-51i98scw.wandb
wandb/offline-run-20240618_140201-51i98scw/files/: wandb-metadata.json  wandb-summary.json
wandb/offline-run-20240618_144504-vreyvyz7/: run-vreyvyz7.wandb
wandb/offline-run-20240618_144504-vreyvyz7/files/: wandb-metadata.json  wandb-summary.json
