[tool.poetry]
name = "openpowerlifting"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
psycopg2-binary = "2.9.9"
pandas = "2.2.2"
transformers = "4.41.0"
torch = "2.3.0"
ipykernel = "^6.29.4"
scikit-learn = "1.5.0"
nltk = "3.8.1"
tqdm = "4.66.4"
torchvision = "0.18.0"
torchaudio = "2.3.0"
accelerate = "0.30.1"
datasets = "2.19.2"
bitsandbytes = "0.39.0"
huggingface-hub = "^0.23.3"
peft = "0.11.1"
evaluate = "0.4.2"
trl = "0.9.4"
wandb = "0.17.1"
gradio = "4.36.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
