[tool.poetry]
name = "openpowerlifting"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
psycopg2-binary = "2.9.9"
human-eval = "^1.0.3"
openai = "1.37.1"
sqlglot = "25.7.1"
langchain = "0.2.12"
streamlit = "1.37.0"
unidecode = "1.3.8"
langchain-openai = "0.1.20"
ollama = "0.3.1"
langchain-community = "^0.2.10"
sqlalchemy = "^2.0.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
